crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__baneslayer_angel_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Flying, first strike, lifelink, protection from Demons and from Dragons"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Flying, first strike, lifelink, protection from Demons and from Dragons",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    }
  ],
  "source_text": "Flying, first strike, lifelink, protection from Demons and from Dragons",
  "card_name": "Baneslayer Angel"
}
