crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__batterskull_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Bounce",
          "target": {
            "type": "SelfRef"
          },
          "destination": null
        },
        "cost": {
          "type": "Mana",
          "cost": {
            "type": "Cost",
            "shards": [],
            "generic": 3
          }
        },
        "sub_ability": null,
        "duration": null,
        "description": "{3}: Return ~ to its owner's hand.",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Attach",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": "You",
            "properties": []
          }
        },
        "cost": {
          "type": "Mana",
          "cost": {
            "type": "Cost",
            "shards": [],
            "generic": 5
          }
        },
        "sub_ability": null,
        "duration": null,
        "description": "Equip {5}",
        "target_prompt": null,
        "sorcery_speed": true,
        "activation_restrictions": [
          {
            "type": "AsSorcery"
          }
        ],
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredStatic": {
        "mode": "Continuous",
        "affected": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": [
            {
              "type": "EquippedBy"
            }
          ]
        },
        "modifications": [
          {
            "type": "AddPower",
            "value": 4
          },
          {
            "type": "AddToughness",
            "value": 4
          },
          {
            "type": "AddKeyword",
            "keyword": "Vigilance"
          },
          {
            "type": "AddKeyword",
            "keyword": "Lifelink"
          }
        ],
        "condition": null,
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [],
        "characteristic_defining": false,
        "description": "Equipped creature gets +4/+4 and has vigilance and lifelink."
      }
    },
    {
      "Keyword": "LivingWeapon"
    }
  ],
  "source_text": "Living weapon (When this Equipment enters, create a 0/0 black Phyrexian Germ creature token, then attach this to it.)\nEquipped creature gets +4/+4 and has vigilance and lifelink.\n{3}: Return this Equipment to its owner's hand.\nEquip {5}",
  "card_name": "Batterskull"
}
