crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__birds_of_paradise_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Flying"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Flying",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Mana",
          "produced": {
            "type": "AnyOneColor",
            "count": {
              "type": "Fixed",
              "value": 1
            },
            "color_options": [
              "White",
              "Blue",
              "Black",
              "Red",
              "Green"
            ]
          }
        },
        "cost": {
          "type": "Tap"
        },
        "sub_ability": null,
        "duration": null,
        "description": "{T}: Add one mana of any color.",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    }
  ],
  "source_text": "Flying\n{T}: Add one mana of any color.",
  "card_name": "Birds of Paradise"
}
