crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__bomat_courier_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Haste"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Haste",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Unimplemented",
          "name": "put",
          "description": "Put all cards exiled with ~ into their owners' hands"
        },
        "cost": {
          "type": "Composite",
          "costs": [
            {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [
                  "Red"
                ],
                "generic": 0
              }
            },
            {
              "type": "Discard",
              "count": {
                "type": "Ref",
                "qty": {
                  "type": "HandSize",
                  "player": {
                    "type": "Controller"
                  }
                }
              },
              "filter": null,
              "random": false,
              "self_ref": false
            },
            {
              "type": "Sacrifice",
              "target": {
                "type": "SelfRef"
              },
              "count": 1
            }
          ]
        },
        "sub_ability": null,
        "duration": null,
        "description": "{R}, Discard your hand, Sacrifice ~: Put all cards exiled with ~ into their owners' hands.",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredTrigger": {
        "mode": "Attacks",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "ExileTop",
            "player": {
              "type": "Controller"
            },
            "count": {
              "type": "Fixed",
              "value": 1
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "origin": null,
        "destination": null,
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "Whenever ~ attacks, exile the top card of your library face down.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    }
  ],
  "source_text": "Haste\nWhenever this creature attacks, exile the top card of your library face down. (You can't look at it.)\n{R}, Discard your hand, Sacrifice this creature: Put all cards exiled with this creature into their owners' hands.",
  "card_name": "Bomat Courier"
}
